Added version to README

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-dwm - dynamic window manager
+dwm - dynamic window manager (6.2)
 ============================
 dwm is an extremely fast, small, and dynamic window manager for X.
 
